--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
       local-datacenter: datacenter1
       schema-action: CREATE_IF_NOT_EXISTS
       connection:
-        request:
-          timeout: 10s
+        connect-timeout: 10s
         init-query-timeout: 10s
+      request:
+        timeout: 2s
